@@ -11,6 +11,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ### Added
 - support for HTMHF.
+- support for comb function with more than 4 objects.
 
 ## [2.18.0] - 2024-03-22
 
